--- a/work.html
+++ b/work.html
@@ -51,32 +51,46 @@
             <p>Cobot was founded in 2022 by former Amazon VP of Robotics Brad Porter, with a team of robotics and AI experts from Amazon, Apple, Meta, Google, Microsoft, NASA, and more. Prior to raising a $30M Series A, we were tasked with designing their brand system, visual identity, and launch website. They’ve since gone on to raise a further $100M Series B, and are well on their way to unicorn status.</p>
             <img src="images/logoStatusbarColourIcons.jpg" alt="The logo, status bar, primairy colors and icons.">
             <img src="images/symbolTypographyImageryMotion.jpg" alt="The symbol, typography, imagery and motion.">
-            <video title="Abstract lines crossing in circles." src="videos/cobotStart.mp4" poster="images/cobotCircleLines.jpg"></video>
+            <video title="Abstract lines crossing in circles." poster="images/cobotCircleLines.jpg" loop playsinline muted loading="lazy">
+                <source src="videos/cobotStart.mp4" type="video/mp4">
+            </video>
         </section>
         <section>
             <h2>A system that embodies Cobot's core values</h2>
             <p>Cobot needed a brand system that embodies their core tenets: Trustworthy, Adaptable, and Useful. Our objective was to create a cohesive visual identity that aligns with these principles and their core values which are Listen, Trust, Contribute, Empower, and Reflect. We developed a modern logo that symbolises the synergy and trust between humans and robots, alongside vibrant, dynamic colours balanced with neutral tones, that convey adaptability and trustworthiness.</p>
-            <video title="Black and White namelogo of Cobot." src="videos/cobotLogo1.mp4" poster="images/cobotLogoBlack.jpg"></video>
+            <video title="Black and White namelogo of Cobot." poster="images/cobotLogoBlack.jpg" loop playsinline muted loading="lazy">
+                <source src="videos/cobotLogo1.mp4" type="video/mp4">
+            </video>
             <img src="images/cobotLogoColour.jpg" alt="Color namelogo of Cobot.">
             <img src="images/cobotLogoBlack2.jpg" alt="Different variations of the namelogo of Cobot.">
-            <video title="A black and white animated smile (the logo)." src="videos/cobotSmiley1.mp4" poster="images/smileyBlack.jpg"></video>
-            <video title="A coloured, animated smile (the logo)." src="videos/cobotSmiley2.mp4" poster="images/smiley.jpg"></video>
+            <video title="A black and white animated smile (the logo)." poster="images/smileyBlack.jpg" loop playsinline muted loading="lazy">
+                <source src="videos/cobotSmiley1.mp4" type="video/mp4">
+            </video>
+            <video title="A coloured, animated smile (the logo)." poster="images/smiley.jpg" loop playsinline muted loading="lazy">
+                <source src="videos/cobotSmiley2.mp4" type="video/mp4">
+            </video>
         </section>
         <section>
             <h2>The interaction between human and robot</h2>
             <p>We wanted to strike a balance between a professional and friendly style, to reflect both the human-robot collaboration and the professional environments in which the cobots operate, such as healthcare, warehouses, and offices. Within the brand system we included high-quality images showcasing real-world applications, emphasising utility and interaction, and introduced clean, sans-serif fonts for readability and a contemporary feel. We explored using expressions based on the Cobot logo to create a friendly and more approachable feel.</p>
             <img src="images/colourwheel.jpg" alt="Colorwheel.">
             <img src="images/colourPalette.jpg" alt="Color palette.">
-            <video title="The app icon." src="videos/cobotLogo2.mp4" poster="images/iconPosterColourful.jpg"></video>
+            <video title="The app icon." poster="images/iconPosterColourful.jpg" loop playsinline muted loading="lazy">
+                <source src="videos/cobotLogo2.mp4" type="video/mp4">
+            </video>
             <img src="images/iconNature.jpg" alt="The app icon with a background with nature.">
-            <video title="The brand guidelines and choices made along the way regarding branding." src="videos/cobotLogo3.mp4" poster="images/posterBlank.jpg"></video>
+            <video title="The brand guidelines and choices made along the way regarding branding." poster="images/posterBlank.jpg" loop playsinline muted loading="lazy">
+                <source src="videos/cobotLogo3.mp4" type="video/mp4">
+            </video>
         </section>
         <section>
             <h2>Developing a memorable brand presence</h2>
             <p>With a combination of precise and minimal design, we wanted to capture the essence of advanced technology and forward-thinking, while implementing a unified visual language that will work flexibly across all platforms. We conducted a comprehensive analysis of the robotics industry and market trends, and closely collaborated with Cobot with multiple rounds of refinement to incorporate feedback and ensure alignment with their core values.</p>
             <img src="images/icons1.jpg" alt="Icons.">
             <img src="images/icons2.jpg" alt="Icons.">
-            <video title="Black and white, animated icons." src="videos/cobotLogo4.mp4" poster="images/iconsBlack.jpg"></video>
+            <video title="Black and white, animated icons." poster="images/iconsBlack.jpg" loop playsinline muted loading="lazy">
+                <source src="videos/cobotLogo4.mp4" type="video/mp4">
+            </video>
             <img src="images/iconsGuideline.jpg" alt="Guidelines regarding the icons.">
             <img src="images/iconsTryOut.jpg" alt="Look of icons on the website.">
             <img src="images/buttonTryOut.jpg" alt="Look of how the button will be used in the website.">
@@ -84,7 +98,9 @@
         <section>
             <h2>Successful launch yields positive outcomes</h2>
             <p>The new brand system was rolled out across Cobots' marketing materials, and product packaging while the website we built went live in time for their Series A funding announcement that had to accurately coincide with media coverage. We helped to increase brand recognition and enhance visibility within the industry, while helping to create a modern, professional image reinforcing their leadership in robotics innovation. Stakeholders and audiences responded positively, noting the alignment with the company’s vision and core values.</p>
-            <video title="Interaction on a phone." src="videos/cobotPhoneDemo.mp4" poster="images/PhoneInteraction.jpg"></video>
+            <video title="Interaction on a phone." poster="images/PhoneInteraction.jpg" loop playsinline muted loading="lazy">
+                <source src="videos/cobotPhoneDemo.mp4" type="video/mp4">
+            </video>
             <img src="images/websiteTryOut.jpg" alt="Website in dark mode.">
             <img src="images/websiteTryOut2.jpg" alt="Website in light mode.">
         </section>
