--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <main>
       <h1>Design the future today</h1>
       <p>We move brands to their next chapter</p>
-      <!--Button for going down the page-->
-      <button></button>
+      <button>Scroll down</button>
 
       <video id="firstVideo" title="A quick rundown of all sorts of applications that we made." poster="images/posterVideoHome.jpg" loop muted playsinline autoplay>
         <source src="videos/homepageStart.mp4" type="video/mp4" />
