responsive video and text

--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
 
     <main>
       <h1>Design the future today</h1>
-      <p>We move brands to their next chapter</p>
-      <button>Scroll down</button>
+      <h2>We move brands to their next chapter</h2>
+      <button>
+        <svg width="48" height="48" viewBox="0 0 48 48">
+          <path d="M36.728 27.022L24 39.75" stroke="#151614" stroke-width="2.65" stroke-linecap="round"></path>
+          <path d="M24 9L24 39.75" stroke="#151614" stroke-width="2.65" stroke-linecap="round"></path>
+          <path d="M23.978 39.7278L11.2722 27.0219" stroke="#151614" stroke-width="2.65" stroke-linecap="round"></path>
+        </svg>
+    </button>
 
       <video id="firstVideo" title="A quick rundown of all sorts of applications that we made." poster="images/posterVideoHome.jpg" loop muted playsinline autoplay>
         <source src="videos/homepageStart.mp4" type="video/mp4" />
