trying to fix it

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
             <source src="videos/homepageStrategy.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <h3>Strategy</h3>
-          <p>Our process starts with strategic anchoring, grasping clients' goals, user needs, and evaluating current products and usage data.</p>
+          <div class="text-content">
+            <h3>Strategy</h3>
+            <p>Our process starts with strategic anchoring, grasping clients' goals, user needs, and evaluating current products and usage data.</p>
+          </div>
         </article>
 
         <article>
@@ -74,8 +76,10 @@
             <source src="videos/homepageDesign.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <h3>Design</h3>
-          <p>Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
+          <div class="text-content">
+            <h3>Design</h3>
+            <p>Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
+          </div>
         </article>
 
         <article>
@@ -83,8 +87,10 @@
             <source src="videos/homepageBrand.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <h3>Brand</h3>
-          <p>At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
+          <div class="text-content">
+            <h3>Brand</h3>
+            <p>At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
+          </div>
         </article>
 
         <article>
@@ -92,8 +98,10 @@
             <source src="videos/homepageTechnology.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <h3>Technology</h3>
-          <p>Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
+          <div class="text-content">
+            <h3>Technology</h3>
+            <p>Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
+          </div>
         </article>
 
         <article>
