responsive till industries

--- a/index.html
+++ b/index.html
@@ -105,25 +105,31 @@
             <p>Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
           </div>
         </article>
+      </section>
 
-        <article>
-          <h3>Industries</h3>
-          <p>We collaborate with industry leaders in robotics, telecoms, AI, and electric vehicles to achieve impactful results.</p>
-          <ul>
-            <li>Tech</li>
-            <li>Media</li>
-            <li>Telecoms</li>
-            <li>Fintech</li>
-            <li>AI</li>
-            <li>Robotics</li>
-            <li>EV</li>
-            <li>Healthcare</li>
-            <li>Automotive</li>
-            <li>eCommerce</li>
-            <li>Wellness</li>
-          </ul>
-        </article>
+      <section class="industries">
+        <div class="left-content">
+            <h3>Industries</h3>
+            <p>We collaborate with industry leaders in robotics, telecoms, AI, and electric vehicles to achieve impactful results.</p>
+        </div>
+        <div class="right-content">
+            <ul>
+                <li>Tech</li>
+                <li>Media</li>
+                <li>Telecoms</li>
+                <li>Fintech</li>
+                <li>AI</li>
+                <li>Robotics</li>
+                <li>EV</li>
+                <li>Healthcare</li>
+                <li>Automotive</li>
+                <li>eCommerce</li>
+                <li>Wellness</li>
+            </ul>
+        </div>
+    </section>    
 
+      <section>
         <article>
           <ol>
             <li>
