responsive till numbers before brands

--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
                 <li>Wellness</li>
             </ul>
         </div>
-    </section>    
+      </section>    
 
-      <section>
+      <section class="industries">
         <article>
-          <ol>
+          <ol class="industries-list">
             <li>
               <h4>50+</h4>
               <p>Brand team-ups</p>
