carousel not working on big screen

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
       </section>
 
       <section>
-        <h2>Brands</h2>
-        <article>
+        <h2 class="brands">Brands</h2>
+        <article class="brands-logos">
           <img src="images/sky.svg" alt="Logo of Sky" />
           <img src="images/axa.svg" alt="Logo of Axa" />
           <img src="images/virgin.svg" alt="Logo of Virgin" />
@@ -165,54 +165,58 @@
           <img src="images/bbc.svg" alt="Logo of BBC" />
         </article>
 
-        <article>
-          <ul>
-            <li>
-              <p>"More Air's exceptional service in branding and website development significantly enhanced our inline presence, crucial for our successful Series A announcement."</p>
-              <h3>Brad Porter</h3>
-              <h4>Founder & CEO, Cobot</h4>
-            </li>
-            <li>
-              <p>"Thoughtful, intelligent, finely- tuned desig is what you'll receive from More Air. And they're very nice people, so you can't go wrong."</p>
-              <h3>James Hilton</h3>
-              <h4>Co-Founder, AKQA</h4>
-            </li>
-            <li>
-              <p>"Super-talented with a natural eye for design. They have a precise style that feels fresh and modern, and care passionately about the quality of their work."</p>
-              <h3>Anthony Davies</h3>
-              <h4>MD Global Design, Sky</h4>
-            </li>
-            <li>
-              <p>"More Air is a very professional multi-talented creative studio and I had great working experiences with them."</p>
-              <h3>Jun Inoue</h3>
-              <h4>CEO, Great Works K.K. Tokyo</h4>
-            </li>
-            <li>
-              <p>"I've developed a great admiration for their work. Always showing very clever solutions and proposals to enhance the usability and overal experience."</p>
-              <h3>Erich Martino</h3>
-              <h4>Design Manager, Microsoft</h4>
-            </li>
-            <li>
-              <p>"I had the absolute pleasure to work with More Air in two startups. Their empathic design sense is spot on and meticulous. It's always a great pleasure to work with them!"</p>
-              <h3>Ivo Weevers</h3>
-              <h4>Founder & CEO, Albert</h4>
-            </li>
-            <li>
-              <p>"Some of the most creative individuals I have worked with, they have a wide range of skills using the latest technologies."</p>
-              <h3>Sheraz Khan</h3>
-              <h4>Senior Manager, Apple</h4>
-            </li>
-            <li>
-              <p>"Highly creative and diligent going beyond the norm to immerse in the wider strategic context to inform design decisions."</p>
-              <h3>Ant Green</h3>
-              <h4>Studio Director, IBM</h4>
-            </li>
-            <li>
-              <p>"More Air created a new identity for Waseda Tokyo and launched a website that redefines business school excellence in design and features."</p>
-              <h3>Sean Hackett</h3>
-              <h4>Professor, Waseda Tokyo</h4>
-            </li>
-          </ul>
+        <article class="carousel-wrapper">
+          <div class="carousel-list">
+              <ul>
+                  <li>
+                      <p>"More Air's exceptional service in branding and website development significantly enhanced our inline presence, crucial for our successful Series A announcement."</p>
+                      <h3>Brad Porter</h3>
+                      <h4>Founder & CEO, Cobot</h4>
+                  </li>
+                  <li>
+                      <p>"Thoughtful, intelligent, finely-tuned design is what you'll receive from More Air. And they're very nice people, so you can't go wrong."</p>
+                      <h3>James Hilton</h3>
+                      <h4>Co-Founder, AKQA</h4>
+                  </li>
+                  <li>
+                      <p>"Super-talented with a natural eye for design. They have a precise style that feels fresh and modern, and care passionately about the quality of their work."</p>
+                      <h3>Anthony Davies</h3>
+                      <h4>MD Global Design, Sky</h4>
+                  </li>
+                  <li>
+                      <p>"More Air is a very professional multi-talented creative studio and I had great working experiences with them."</p>
+                      <h3>Jun Inoue</h3>
+                      <h4>CEO, Great Works K.K. Tokyo</h4>
+                  </li>
+                  <li>
+                      <p>"I've developed a great admiration for their work. Always showing very clever solutions and proposals to enhance the usability and overall experience."</p>
+                      <h3>Erich Martino</h3>
+                      <h4>Design Manager, Microsoft</h4>
+                  </li>
+                  <li>
+                      <p>"I had the absolute pleasure to work with More Air in two startups. Their empathic design sense is spot on and meticulous. It's always a great pleasure to work with them!"</p>
+                      <h3>Ivo Weevers</h3>
+                      <h4>Founder & CEO, Albert</h4>
+                  </li>
+                  <li>
+                      <p>"Some of the most creative individuals I have worked with, they have a wide range of skills using the latest technologies."</p>
+                      <h3>Sheraz Khan</h3>
+                      <h4>Senior Manager, Apple</h4>
+                  </li>
+                  <li>
+                      <p>"Highly creative and diligent going beyond the norm to immerse in the wider strategic context to inform design decisions."</p>
+                      <h3>Ant Green</h3>
+                      <h4>Studio Director, IBM</h4>
+                  </li>
+                  <li>
+                      <p>"More Air created a new identity for Waseda Tokyo and launched a website that redefines business school excellence in design and features."</p>
+                      <h3>Sean Hackett</h3>
+                      <h4>Professor, Waseda Tokyo</h4>
+                  </li>
+              </ul>
+          </div>
+          <div class="carousel-nav left">&#10094;</div>
+          <div class="carousel-nav right">&#10095;</div>
         </article>
 
         <article>
