Sort off working awards.

--- a/index.html
+++ b/index.html
@@ -218,17 +218,23 @@
           <div class="carousel-nav left">&#10094;</div>
           <div class="carousel-nav right">&#10095;</div>
         </article>
-
-        <article>
-          <h3>Awards</h3>
-          <p>We're grateful that our work has been recognised through many international design awards over the years.</p>
-          <img src="images/goodDesignAward.png" alt="Logo of good design award" />
-          <img src="images/reddotWinner.png" alt="Logo of reddot winner" />
-          <img src="images/internationalDesignExcellenceAwards.png" alt="Logo of international design excellence awards" />
-          <img src="images/designAward.png" alt="Logo of design award" />
-        </article>
       </section>
 
+      <section class="awards-section">
+        <article class="awards-card">
+            <div class="awards-text">
+                <h3>Awards</h3>
+                <p>We're grateful that our work has been recognised through many international design awards over the years.</p>
+            </div>
+            <div class="awards-images">
+                <img src="images/goodDesignAward.png" alt="Logo of good design award" />
+                <img src="images/reddotWinner.png" alt="Logo of reddot winner" />
+                <img src="images/internationalDesignExcellenceAwards.png" alt="Logo of international design excellence awards" />
+                <img src="images/designAward.png" alt="Logo of design award" />
+            </div>
+        </article>
+      </section>    
+      
       <section>
         <h2>Recent work</h2>
         <ol>
