--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="jouw naam" />
+    <meta name="author" content="Kaylee Hoek" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>MoreAir</title>
+    <title>More Air</title>
 
     <link href="styles/style.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="https://cdn.sanity.io/images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format" />
@@ -347,7 +347,7 @@
 
     <footer>
       <section>
-        <h2>Let's work together</h2>
+        <h2 id="letsWork">Let's work together</h2>
         <div class="containerButton">
           <button id="sayButton">Say hello <span>&nbsp;→</span></button>
         </div>
