--- a/index.html
+++ b/index.html
@@ -31,15 +31,11 @@
           </svg>
         </label>
 
-        <div class="nav">
-          <div class="nav-wrapper">
-            <nav>
-              <a href="index.html">About</a>
-              <a href="work.html">Work</a>
-              <a href="#">Contact</a>
-            </nav>
-          </div>
-        </div>
+            <ul class="nav">
+                <li><a href="index.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
       </nav>
     </header>
 
@@ -130,7 +126,7 @@
       </section>    
 
       <section class="industries">
-        <article>
+        <article class="industries-a">
           <ol class="industries-list">
             <li>
               <h4>50+</h4>
