--- a/work.html
+++ b/work.html
@@ -15,6 +15,7 @@
     <header>
       <nav>
         <a id="logo" href="index.html"><img src="images/logoBlack.svg" alt="Logo More Air." /></a>
+
         <input id="toggle" type="checkbox" aria-hidden="true" />
         <label class="hamburger" for="toggle" aria-hidden="true">
           <!-- Unchecked state -->
@@ -30,15 +31,11 @@
           </svg>
         </label>
 
-        <div class="nav">
-          <div class="nav-wrapper">
-            <nav>
-              <a href="index.html">About</a>
-              <a href="work.html">Work</a>
-              <a href="#">Contact</a>
-            </nav>
-          </div>
-        </div>
+            <ul class="nav">
+                <li><a href="index.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
       </nav>
     </header>
 
