--- a/work.html
+++ b/work.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="jouw naam" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Kaylee Hoek">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Cobot Brand System</title>
 
-    <link href="styles/style.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="https://cdn.sanity.io/images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format" />
+    <link href="styles/style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://cdn.sanity.io/images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format">
   </head>
 
   <body>
     <header>
       <nav>
-        <a id="logo" href="index.html"><img src="images/logoBlack.svg" alt="Logo More Air." /></a>
+        <a id="logo" href="index.html"><img src="/images/logoBlack.svg" alt="Logo More Air." /></a>
 
-        <input id="toggle" type="checkbox" aria-hidden="true" />
+        <input id="toggle" type="checkbox" aria-hidden="true">
         <label class="hamburger" for="toggle" aria-hidden="true">
           <!-- Unchecked state -->
           <svg class="unchecked" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -51,21 +51,21 @@
           </svg>
         </button>
       </div>
-      <img src="images/cobotBrandSystem.jpg" alt="Ipad that displays the Cobot website." />
+      <img src="/images/cobotBrandSystem.jpg" alt="Ipad that displays the Cobot website.">
 
       <section class="cobot-section">
         <h2>Cobot, defining the future of robot interaction</h2>
         <p>
           Cobot was founded in 2022 by former Amazon VP of Robotics Brad Porter, with a team of robotics and AI experts from Amazon, Apple, Meta, Google, Microsoft, NASA, and more. Prior to raising a
-          $30M Series A, we were tasked with designing their brand system, visual identity, and launch website. They’ve since gone on to raise a further $100M Series B, and are well on their way to
+          $30M Series A, we were tasked with designing their brand system, visual identity, and launch website. They've since gone on to raise a further $100M Series B, and are well on their way to
           unicorn status.
         </p>
         <div class="media-container">
-          <img src="images/logoStatusbarColourIcons.jpg" alt="The logo, status bar, primary colors, and icons." />
-          <img src="images/symbolTypographyImageryMotion.jpg" alt="The symbol, typography, imagery, and motion." />
+          <img src="/images/logoStatusbarColourIcons.jpg" alt="The logo, status bar, primary colors, and icons.">
+          <img src="/images/symbolTypographyImageryMotion.jpg" alt="The symbol, typography, imagery, and motion.">
         </div>
-        <video title="Abstract lines crossing in circles." poster="images/cobotCircleLines.jpg" loop playsinline controls>
-          <source src="videos/cobotStart.mp4" type="video/mp4" />
+        <video title="Abstract lines crossing in circles." poster="/images/cobotCircleLines.jpg" loop playsinline controls>
+          <source src="/videos/cobotStart.mp4" type="video/mp4" />
         </video>
       </section>      
 
@@ -76,18 +76,18 @@
           their core values which are Listen, Trust, Contribute, Empower, and Reflect. We developed a modern logo that symbolizes the synergy and trust between humans and robots, alongside vibrant,
           dynamic colours balanced with neutral tones, that convey adaptability and trustworthiness.
         </p>
-        <video title="Black and White namelogo of Cobot." poster="images/cobotLogoBlack.jpg" loop playsinline controls>
-          <source src="videos/cobotLogo1.mp4" type="video/mp4" />
+        <video title="Black and White namelogo of Cobot." poster="/images/cobotLogoBlack.jpg" loop playsinline controls>
+          <source src="/videos/cobotLogo1.mp4" type="video/mp4" />
         </video>
         <div class="media-container">
-          <img src="images/cobotLogoColour.jpg" alt="Color namelogo of Cobot." />
-          <img src="images/cobotLogoBlack2.jpg" alt="Different variations of the namelogo of Cobot." />
+          <img src="/images/cobotLogoColour.jpg" alt="Color namelogo of Cobot.">
+          <img src="/images/cobotLogoBlack2.jpg" alt="Different variations of the namelogo of Cobot.">
           <div class="video-pair">
             <video title="A black and white animated smile (the logo)." poster="images/smileyBlack.jpg" loop playsinline controls>
-              <source src="videos/cobotSmiley1.mp4" type="video/mp4" />
+              <source src="/videos/cobotSmiley1.mp4" type="video/mp4">
             </video>
             <video title="A coloured, animated smile (the logo)." poster="images/smiley.jpg" loop playsinline controls>
-              <source src="videos/cobotSmiley2.mp4" type="video/mp4" />
+              <source src="/videos/cobotSmiley2.mp4" type="video/mp4">
             </video>
           </div>
         </div>
@@ -193,23 +193,32 @@
         <p>© More Air 2024</p>
 
         <!--Social media links-->
-        <div class="social-media">
-          <a href="#" alt="Instagram">
-            <svg width="20px" viewBox="0 0 24 24">
-              <path d="M12,5.94c-1.2,0-2.37,0.36-3.37,1.02c-1,0.67-1.77,1.61-2.23,2.72c-0.46,1.11-0.58,2.33-0.35,3.5 c0.23,1.18,0.81,2.26,1.66,3.1s1.93,1.43,3.1,1.66c1.18,0.23,2.4,0.11,3.5-0.35c1.11-0.46,2.06-1.24,2.72-2.23 c0.67-1,1.02-2.17,1.02-3.37c0-1.61-0.64-3.15-1.78-4.29C15.15,6.57,13.61,5.94,12,5.94z M14.78,14.78 c-0.74,0.74-1.74,1.15-2.78,1.15c-0.78,0-1.54-0.23-2.19-0.66c-0.65-0.43-1.15-1.05-1.45-1.77c-0.3-0.72-0.38-1.51-0.22-2.27 c0.15-0.76,0.53-1.46,1.08-2.02c0.55-0.55,1.25-0.93,2.02-1.08c0.76-0.15,1.55-0.07,2.27,0.22c0.72,0.3,1.33,0.8,1.77,1.45 s0.66,1.41,0.66,2.19C15.94,13.04,15.52,14.05,14.78,14.78z M18.3,4.28c-0.78,0-1.42,0.63-1.42,1.42s0.63,1.42,1.42,1.42 c0.78,0,1.42-0.63,1.42-1.42S19.09,4.28,18.3,4.28z M23.74,7.13c-0.06-1.26-0.26-2.12-0.55-2.87c-0.3-0.79-0.76-1.5-1.36-2.09 c-0.59-0.6-1.3-1.07-2.09-1.36c-0.75-0.29-1.61-0.49-2.87-0.55C15.61,0.2,15.21,0.19,12,0.19c-3.21,0-3.61,0.01-4.87,0.07 C5.87,0.32,5.02,0.52,4.26,0.81c-0.79,0.3-1.5,0.76-2.09,1.36c-0.6,0.59-1.07,1.3-1.36,2.09C0.52,5.02,0.32,5.87,0.26,7.13 C0.2,8.39,0.19,8.79,0.19,12s0.01,3.61,0.07,4.87c0.06,1.26,0.26,2.12,0.55,2.87c0.3,0.79,0.76,1.5,1.36,2.09 c0.59,0.6,1.3,1.07,2.09,1.36c0.75,0.29,1.61,0.49,2.87,0.55c1.26,0.06,1.66,0.07,4.87,0.07c3.21,0,3.61-0.01,4.87-0.07 c1.26-0.06,2.12-0.26,2.87-0.55c0.78-0.3,1.5-0.77,2.09-1.36c0.59-0.59,1.06-1.31,1.36-2.09c0.29-0.75,0.49-1.61,0.55-2.87 c0.06-1.26,0.07-1.66,0.07-4.87S23.8,8.39,23.74,7.13z M21.61,16.77c-0.05,1.15-0.24,1.78-0.41,2.19c-0.2,0.51-0.5,0.97-0.88,1.36 c-0.39,0.39-0.85,0.69-1.36,0.88c-0.42,0.16-1.04,0.35-2.19,0.41c-1.24,0.06-1.62,0.07-4.77,0.07c-3.15,0-3.53-0.01-4.77-0.07 c-1.15-0.05-1.78-0.24-2.19-0.41c-0.51-0.19-0.98-0.49-1.36-0.88c-0.39-0.38-0.69-0.84-0.88-1.36c-0.16-0.42-0.35-1.04-0.41-2.19 C2.33,15.53,2.32,15.15,2.32,12c0-3.15,0.01-3.53,0.07-4.77c0.05-1.15,0.24-1.78,0.41-2.19c0.19-0.51,0.49-0.98,0.88-1.36 c0.38-0.39,0.84-0.69,1.36-0.88c0.42-0.16,1.04-0.35,2.19-0.41C8.47,2.33,8.85,2.32,12,2.32l0,0c3.15,0,3.53,0.01,4.77,0.07 c1.15,0.05,1.78,0.24,2.19,0.41c0.51,0.19,0.98,0.49,1.36,0.88c0.39,0.38,0.69,0.84,0.88,1.36c0.16,0.42,0.35,1.04,0.41,2.19 c0.06,1.25,0.07,1.62,0.07,4.77C21.68,15.15,21.67,15.53,21.61,16.77z"></path>
-            </svg>
-          </a>
-          <a href="#" alt="X">
-            <svg width="20px" viewBox="0 0 24 24">
-              <path d="M17.76,15.26c-3.08-4.49-3.49-5.09-3.48-5.12c0.01-0.03,0.43-0.52,3.19-3.73 c0.47-0.55,1.13-1.31,1.45-1.69s0.65-0.76,0.73-0.85c0.08-0.09,0.48-0.55,0.89-1.03c0.41-0.48,1.11-1.29,1.56-1.81 c0.44-0.52,0.82-0.96,0.84-0.98C22.97,0,22.91,0,21.94,0H20.9l-0.46,0.54c-0.61,0.71-1.72,2-2.03,2.36 c-0.14,0.16-0.31,0.36-0.38,0.45c-0.07,0.09-0.22,0.25-0.32,0.37c-0.1,0.12-0.62,0.72-1.15,1.34s-0.97,1.13-0.98,1.14 c-0.01,0.01-0.12,0.14-0.25,0.29c-0.23,0.27-0.46,0.54-1.52,1.77c-0.47,0.54-0.49,0.56-0.53,0.51c-0.02-0.03-1.39-2.01-3.03-4.4 L7.27,0l-3.5,0l-3.5,0l0.14,0.2C0.5,0.32,2.33,2.98,4.49,6.12s4.15,6.04,4.43,6.45c0.28,0.41,0.51,0.75,0.51,0.76 s-0.1,0.14-0.23,0.29c-0.13,0.15-0.49,0.57-0.8,0.93c-0.31,0.36-0.84,0.98-1.17,1.36s-0.91,1.06-1.3,1.51 c-0.38,0.44-1.07,1.24-1.52,1.77c-1.41,1.64-1.62,1.88-2.69,3.13c-0.57,0.67-1.12,1.31-1.22,1.42c-0.1,0.11-0.18,0.22-0.18,0.23 c0,0.02,0.36,0.03,1.02,0.03h1.02l1.12-1.3c0.61-0.72,1.22-1.42,1.35-1.57c0.27-0.31,2.36-2.74,2.53-2.95 c0.07-0.08,0.16-0.19,0.22-0.25c0.05-0.06,0.46-0.53,0.91-1.06c0.45-0.52,0.83-0.96,0.84-0.98c0.02-0.02,0.25-0.29,0.53-0.61 s0.51-0.59,0.52-0.59s1.43,2.05,3.14,4.55s3.16,4.6,3.19,4.65l0.07,0.1l3.49,0c2.87,0,3.48-0.01,3.47-0.03 C23.71,23.93,22.04,21.5,17.76,15.26z M19.32,22.49c-1.24,0.01-1.58,0-1.61-0.03c-0.02-0.02-1-1.42-2.18-3.11 C11.83,14.05,6.07,5.81,4.6,3.71c-0.77-1.1-1.43-2.04-1.45-2.08L3.1,1.56L4.7,1.57l1.59,0.01l3.18,4.55c1.75,2.5,5.03,7.2,7.3,10.45 l4.13,5.91L19.32,22.49z"></path>
-            </svg>
-          </a>
-          <a href="#" alt="LinkedIn">
-            <svg width="20px" viewBox="0 0 24 24">
-              <path d="M21.33,0H2.67C1.19,0,0,1.19,0,2.67v18.67C0,22.81,1.19,24,2.67,24h18.67c1.47,0,2.67-1.19,2.67-2.67 V2.67C24,1.19,22.81,0,21.33,0z M7.26,20.67H3.68V9.11h3.58V20.67z M5.45,7.6c-1.17,0-2.12-0.95-2.12-2.13s0.95-2.13,2.12-2.13 c1.17,0,2.12,0.95,2.12,2.13S6.62,7.6,5.45,7.6z M20.67,20.67h-3.56V14.6c0-1.66-0.63-2.59-1.95-2.59c-1.43,0-2.18,0.97-2.18,2.59 v6.07H9.54V9.11h3.43v1.56c0,0,1.03-1.91,3.48-1.91c2.45,0,4.21,1.5,4.21,4.59V20.67z"></path>
-            </svg>
-          </a>
-        </div>
+        <ul class="social-media">
+          <li>
+            <a href="#" title="Instagram">
+              <svg width="20px" viewBox="0 0 24 24">
+                <path
+                  d="M12,5.94c-1.2,0-2.37,0.36-3.37,1.02c-1,0.67-1.77,1.61-2.23,2.72c-0.46,1.11-0.58,2.33-0.35,3.5 c0.23,1.18,0.81,2.26,1.66,3.1s1.93,1.43,3.1,1.66c1.18,0.23,2.4,0.11,3.5-0.35c1.11-0.46,2.06-1.24,2.72-2.23 c0.67-1,1.02-2.17,1.02-3.37c0-1.61-0.64-3.15-1.78-4.29C15.15,6.57,13.61,5.94,12,5.94z M14.78,14.78 c-0.74,0.74-1.74,1.15-2.78,1.15c-0.78,0-1.54-0.23-2.19-0.66c-0.65-0.43-1.15-1.05-1.45-1.77c-0.3-0.72-0.38-1.51-0.22-2.27 c0.15-0.76,0.53-1.46,1.08-2.02c0.55-0.55,1.25-0.93,2.02-1.08c0.76-0.15,1.55-0.07,2.27,0.22c0.72,0.3,1.33,0.8,1.77,1.45 s0.66,1.41,0.66,2.19C15.94,13.04,15.52,14.05,14.78,14.78z M18.3,4.28c-0.78,0-1.42,0.63-1.42,1.42s0.63,1.42,1.42,1.42 c0.78,0,1.42-0.63,1.42-1.42S19.09,4.28,18.3,4.28z M23.74,7.13c-0.06-1.26-0.26-2.12-0.55-2.87c-0.3-0.79-0.76-1.5-1.36-2.09 c-0.59-0.6-1.3-1.07-2.09-1.36c-0.75-0.29-1.61-0.49-2.87-0.55C15.61,0.2,15.21,0.19,12,0.19c-3.21,0-3.61,0.01-4.87,0.07 C5.87,0.32,5.02,0.52,4.26,0.81c-0.79,0.3-1.5,0.76-2.09,1.36c-0.6,0.59-1.07,1.3-1.36,2.09C0.52,5.02,0.32,5.87,0.26,7.13 C0.2,8.39,0.19,8.79,0.19,12s0.01,3.61,0.07,4.87c0.06,1.26,0.26,2.12,0.55,2.87c0.3,0.79,0.76,1.5,1.36,2.09 c0.59,0.6,1.3,1.07,2.09,1.36c0.75,0.29,1.61,0.49,2.87,0.55c1.26,0.06,1.66,0.07,4.87,0.07c3.21,0,3.61-0.01,4.87-0.07 c1.26-0.06,2.12-0.26,2.87-0.55c0.78-0.3,1.5-0.77,2.09-1.36c0.59-0.59,1.06-1.31,1.36-2.09c0.29-0.75,0.49-1.61,0.55-2.87 c0.06-1.26,0.07-1.66,0.07-4.87S23.8,8.39,23.74,7.13z M21.61,16.77c-0.05,1.15-0.24,1.78-0.41,2.19c-0.2,0.51-0.5,0.97-0.88,1.36 c-0.39,0.39-0.85,0.69-1.36,0.88c-0.42,0.16-1.04,0.35-2.19,0.41c-1.24,0.06-1.62,0.07-4.77,0.07c-3.15,0-3.53-0.01-4.77-0.07 c-1.15-0.05-1.78-0.24-2.19-0.41c-0.51-0.19-0.98-0.49-1.36-0.88c-0.39-0.38-0.69-0.84-0.88-1.36c-0.16-0.42-0.35-1.04-0.41-2.19 C2.33,15.53,2.32,15.15,2.32,12c0-3.15,0.01-3.53,0.07-4.77c0.05-1.15,0.24-1.78,0.41-2.19c0.19-0.51,0.49-0.98,0.88-1.36 c0.38-0.39,0.84-0.69,1.36-0.88c0.42-0.16,1.04-0.35,2.19-0.41C8.47,2.33,8.85,2.32,12,2.32l0,0c3.15,0,3.53,0.01,4.77,0.07 c1.15,0.05,1.78,0.24,2.19,0.41c0.51,0.19,0.98,0.49,1.36,0.88c0.39,0.38,0.69,0.84,0.88,1.36c0.16,0.42,0.35,1.04,0.41,2.19 c0.06,1.25,0.07,1.62,0.07,4.77C21.68,15.15,21.67,15.53,21.61,16.77z"></path>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" title="X">
+              <svg width="20px" viewBox="0 0 24 24">
+                <path
+                  d="M17.76,15.26c-3.08-4.49-3.49-5.09-3.48-5.12c0.01-0.03,0.43-0.52,3.19-3.73 c0.47-0.55,1.13-1.31,1.45-1.69s0.65-0.76,0.73-0.85c0.08-0.09,0.48-0.55,0.89-1.03c0.41-0.48,1.11-1.29,1.56-1.81 c0.44-0.52,0.82-0.96,0.84-0.98C22.97,0,22.91,0,21.94,0H20.9l-0.46,0.54c-0.61,0.71-1.72,2-2.03,2.36 c-0.14,0.16-0.31,0.36-0.38,0.45c-0.07,0.09-0.22,0.25-0.32,0.37c-0.1,0.12-0.62,0.72-1.15,1.34s-0.97,1.13-0.98,1.14 c-0.01,0.01-0.12,0.14-0.25,0.29c-0.23,0.27-0.46,0.54-1.52,1.77c-0.47,0.54-0.49,0.56-0.53,0.51c-0.02-0.03-1.39-2.01-3.03-4.4 L7.27,0l-3.5,0l-3.5,0l0.14,0.2C0.5,0.32,2.33,2.98,4.49,6.12s4.15,6.04,4.43,6.45c0.28,0.41,0.51,0.75,0.51,0.76 s-0.1,0.14-0.23,0.29c-0.13,0.15-0.49,0.57-0.8,0.93c-0.31,0.36-0.84,0.98-1.17,1.36s-0.91,1.06-1.3,1.51 c-0.38,0.44-1.07,1.24-1.52,1.77c-1.41,1.64-1.62,1.88-2.69,3.13c-0.57,0.67-1.12,1.31-1.22,1.42c-0.1,0.11-0.18,0.22-0.18,0.23 c0,0.02,0.36,0.03,1.02,0.03h1.02l1.12-1.3c0.61-0.72,1.22-1.42,1.35-1.57c0.27-0.31,2.36-2.74,2.53-2.95 c0.07-0.08,0.16-0.19,0.22-0.25c0.05-0.06,0.46-0.53,0.91-1.06c0.45-0.52,0.83-0.96,0.84-0.98c0.02-0.02,0.25-0.29,0.53-0.61 s0.51-0.59,0.52-0.59s1.43,2.05,3.14,4.55s3.16,4.6,3.19,4.65l0.07,0.1l3.49,0c2.87,0,3.48-0.01,3.47-0.03 C23.71,23.93,22.04,21.5,17.76,15.26z M19.32,22.49c-1.24,0.01-1.58,0-1.61-0.03c-0.02-0.02-1-1.42-2.18-3.11 C11.83,14.05,6.07,5.81,4.6,3.71c-0.77-1.1-1.43-2.04-1.45-2.08L3.1,1.56L4.7,1.57l1.59,0.01l3.18,4.55c1.75,2.5,5.03,7.2,7.3,10.45 l4.13,5.91L19.32,22.49z"></path>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" title="LinkedIn">
+              <svg width="20px" viewBox="0 0 24 24">
+                <path
+                  d="M21.33,0H2.67C1.19,0,0,1.19,0,2.67v18.67C0,22.81,1.19,24,2.67,24h18.67c1.47,0,2.67-1.19,2.67-2.67 V2.67C24,1.19,22.81,0,21.33,0z M7.26,20.67H3.68V9.11h3.58V20.67z M5.45,7.6c-1.17,0-2.12-0.95-2.12-2.13s0.95-2.13,2.12-2.13 c1.17,0,2.12,0.95,2.12,2.13S6.62,7.6,5.45,7.6z M20.67,20.67h-3.56V14.6c0-1.66-0.63-2.59-1.95-2.59c-1.43,0-2.18,0.97-2.18,2.59 v6.07H9.54V9.11h3.43v1.56c0,0,1.03-1.91,3.48-1.91c2.45,0,4.21,1.5,4.21,4.59V20.67z"></path>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
 
